# laplace_thickness_release

./: .gitignore  LICENSE  README.md  all_traced_points.txt  inner_seed_point.npy  outer_seed_point.npy  pyproject.toml  seed_point.npy  simulated_pial.vtk  simulated_white.vtk  tessellated_patch.vtk  zipped_surface.pkl
src/laplace_thickness_release.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
validation/disks_results/: 15mm_3_paths.csv  15mm_4_paths.csv  _MASTER_paths.csv
validation/figures/: validity_vs_mesh_metrics_agg.csv
validation/folds_final2_results/: _MASTER_paths.csv  two_way_phantoms.csv  zipped_patch_001_paths.csv  zipped_patch_002_paths.csv  zipped_patch_003_paths.csv  zipped_patch_004_paths.csv  zipped_patch_008_paths.csv  zipped_patch_009_paths.csv  zipped_patch_010_paths.csv  zipped_patch_011_paths.csv  zipped_patch_013_paths.csv  zipped_patch_017_paths.csv
validation/folds_results/: _MASTER_paths.csv  zipped_patch_000_paths.csv  zipped_patch_001_paths.csv  zipped_patch_006_paths.csv  zipped_patch_009_paths.csv  zipped_patch_010_paths.csv
validation/hemispheres_results/: 15mm_0.25_paths.csv  15mm_1_paths.csv  _MASTER_paths.csv
validation/mesh_quality_results/: shape_quality_unperturbed.csv
validation/other_final2_results/: 15mm_0.25_paths.csv  15mm_0.5_paths.csv  15mm_1_paths.csv  15mm_2_paths.csv  15mm_3_paths.csv  15mm_4_paths.csv  5mm_0.25_paths.csv  5mm_0.5_paths.csv  5mm_1_paths.csv  5mm_2_paths.csv  5mm_3_paths.csv  5mm_4_paths.csv  _MASTER_paths.csv  two_way_phantoms.csv
validation/phantom_results/: 0.5x10_05_paths.csv  (+24 more)
(+912 files in other folders)
