[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "laplace_thickness_release"
version = "0.1.0"
description = "Laplace thickness: BEM + tracing utilities"
requires-python = ">=3.10"
dependencies = [
  "numpy",
  "matplotlib",
  "scipy",
  "numba",
  "vtk",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
